--- a/core/banking-protocol/pom.xml
+++ b/core/banking-protocol/pom.xml
@@ -225,6 +225,11 @@
             <version>1.0.0-RC3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path-assert</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
 
