OBG-85. Dropped MockMvc as it makes things complicated for async requests due to asyncDispatch

--- a/core/banking-protocol/pom.xml
+++ b/core/banking-protocol/pom.xml
@@ -236,6 +236,11 @@
             <artifactId>json-path-assert</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>spring-web-test-client</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
