--- a/fintech-examples/fintech-api/pom.xml
+++ b/fintech-examples/fintech-api/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>fintech-api</artifactId>
-  <name>fintech-api</name>
+  <name>fintech-examples/fintech-api</name>
 
   <properties>
     <!-- Hard reference to root directory. Used to reference pmd anc checkstyle files from root.
@@ -75,12 +75,14 @@
               <inputSpec>${openapi-spec-file-location}</inputSpec>
               <language>spring</language>
               <output>${project.build.directory}/generated-sources/open-api/</output>
+              <generateApiTests>false</generateApiTests>
+              <generateModelTests>false</generateModelTests>
               <configOptions>
                 <sourceFolder>src/main/java</sourceFolder>
-                <basePackage>de.adorsys.opba.fintechapi</basePackage>
-                <configPackage>de.adorsys.opba.fintechapi.config</configPackage>
-                <modelPackage>de.adorsys.opba.fintechapi.model</modelPackage>
-                <apiPackage>de.adorsys.opba.fintechapi.resource</apiPackage>
+                <basePackage>de.adorsys.opba.fintech.api</basePackage>
+                <configPackage>de.adorsys.opba.fintech.api.de.adorsys.opba.fintech.impl.config</configPackage>
+                <modelPackage>de.adorsys.opba.fintech.api.model</modelPackage>
+                <apiPackage>de.adorsys.opba.fintech.api.resource</apiPackage>
                 <interfaceOnly>true</interfaceOnly>
                 <skipOverwrite>true</skipOverwrite>
                 <dateLibrary>java8</dateLibrary>
@@ -90,8 +92,6 @@
                 <useTags>true</useTags>
                 <library>spring-mvc</library>
                 <swaggerDocketConfig>false</swaggerDocketConfig>
-                <generateApiTests>false</generateApiTests>
-                <generateModelTests>false</generateModelTests>
               </configOptions>
             </configuration>
           </execution>
