--- a/fintech-examples/fintech-server/pom.xml
+++ b/fintech-examples/fintech-server/pom.xml
@@ -6,11 +6,10 @@
         <groupId>de.adorsys.opba</groupId>
         <artifactId>fintech-examples</artifactId>
         <version>0.0.4-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>fintech-server</artifactId>
-    <name>fintech-server</name>
+    <name>fintech-examples/fintech-server</name>
 
     <properties>
       <!-- Hard reference to root directory. Used to reference pmd anc checkstyle files from root.
@@ -21,9 +20,10 @@
     <dependencies>
         <dependency>
             <groupId>de.adorsys.opba</groupId>
-            <artifactId>fintech-api</artifactId>
-            <version>0.0.4-SNAPSHOT</version>
+            <artifactId>fintech-impl</artifactId>
+            <version>${project.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
