--- a/fintech-examples/pom.xml
+++ b/fintech-examples/pom.xml
@@ -22,6 +22,7 @@
     <modules>
         <module>fintech-api</module>
         <module>fintech-server</module>
+        <module>fintech-impl</module>
     </modules>
 </project>
 
