--- a/fintech-examples/fintech-api/src/main/resources/static/fintech_api.yml
+++ b/fintech-examples/fintech-api/src/main/resources/static/fintech_api.yml
@@ -743,7 +743,7 @@ components:
           type: string
         lastLogin:
           type: string
-          format: date
+          format: date-time
 
     # Search and bank profile
     searchInput:
