--- a/core/banking-protocol/pom.xml
+++ b/core/banking-protocol/pom.xml
@@ -19,6 +19,14 @@
     </properties>
 
     <dependencies>
+
+        <!-- api -->
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
+            <artifactId>opba-banking-rest-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <!-- javadoc -->
         <dependency>
             <groupId>javax.interceptor</groupId>
