--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ jdk:
 script:
   # tests are not done with mvn test - dont know why
   - mvn verify cobertura:cobertura
-  - make fintech-ui
+  - docker run -it --rm -v "$PWD":/opt/app-root/src -w /opt/app-root/src -u "$(id -u "${USER}"):$(id -g "${USER}")" trion/ng-cli make fintech-ui
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
