OBG-120 generate client stub for bank search

--- a/fintech-examples/fintech-impl/pom.xml
+++ b/fintech-examples/fintech-impl/pom.xml
@@ -13,6 +13,7 @@
         <!-- Hard reference to root directory. Used to reference pmd anc checkstyle files from root.
         Change this if depth changes. Current: /open-banking-gateway/core -->
         <main.basedir>${project.parent.parent.basedir}</main.basedir>
+        <banksearch-file-location>${main.basedir}/opba-banking-rest-api/src/main/resources/static/tpp_banking_api_bank_search.yml</banksearch-file-location>
     </properties>
 
 
@@ -25,6 +26,85 @@
             <artifactId>fintech-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.swagger.core.v3</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>2.30</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-json-jackson</artifactId>
+            <version>2.30</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-multipart</artifactId>
+            <version>2.30</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+
+
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>io.swagger.codegen.v3</groupId>
+                <artifactId>swagger-codegen-maven-plugin</artifactId>
+                <version>${swagger-codegen-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <inputSpec>${banksearch-file-location}</inputSpec>
+                            <language>java</language>
+                            <output>${project.build.directory}/generated-sources/open-api/</output>
+                            <generateApiTests>false</generateApiTests>
+                            <generateModelTests>false</generateModelTests>
+                            <configOptions>
+                                <sourceFolder>src/main/java</sourceFolder>
+                                <basePackage>de.adorsys.opba.tpp.bankserach.api</basePackage>
+                                <configPackage>de.adorsys.opba.tpp.bankserach.api.config</configPackage>
+                                <modelPackage>de.adorsys.opba.tpp.bankserach.api.model</modelPackage>
+                                <apiPackage>de.adorsys.opba.tpp.bankserach.api.resource</apiPackage>
+                                <invokerPackage>de.adorsys.opba.tpp.bankserach.client</invokerPackage>
+                                <interfaceOnly>true</interfaceOnly>
+                                <skipOverwrite>true</skipOverwrite>
+                                <dateLibrary>java8</dateLibrary>
+                                <java8>true</java8>
+                                <implicitHeaders>false</implicitHeaders>
+                                <delegatePattern>true</delegatePattern>
+                                <useTags>true</useTags>
+                                <library>jersey2</library>
+                                <swaggerDocketConfig>false</swaggerDocketConfig>
+                            </configOptions>
+                        </configuration>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>io.swagger.codegen.v3</groupId>
+                        <artifactId>swagger-codegen-generators</artifactId>
+                        <version>${swagger-codegen-generators.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+        </plugins>
+    </build>
 </project>
