OBG-124 use string rather than String in openapi.yml

--- a/opba-banking-rest-api/src/main/resources/static/tpp_banking_api_bank_search.yml
+++ b/opba-banking-rest-api/src/main/resources/static/tpp_banking_api_bank_search.yml
@@ -27,7 +27,7 @@ paths:
           description: The bank search input string
           required: true
           schema:
-            type: String
+            type: string
         - name: start
           in: query
           description: The index of the first result
