OBG 120 fintech server with login, banksearch and bankprofile works

--- a/fintech-examples/fintech-api/src/main/resources/static/fintech_api.yml
+++ b/fintech-examples/fintech-api/src/main/resources/static/fintech_api.yml
@@ -553,10 +553,8 @@ components:
           schema:
             type: object
             properties:
-              userProfile:
-                type: array
-                items:
-                  $ref: '#/components/schemas/bankProfile'
+              bankProfile:
+                $ref: '#/components/schemas/bankProfile'
 
     200_AccountList:
       description: Response containing the list of bank accounts.
@@ -783,6 +781,8 @@ components:
       title: Bank Profile
       type: object
       properties:
+        bankId:
+          type: string
         bankName:
           type: string
         bic:
