--- a/opba-banking-rest-api/src/main/resources/static/tpp_banking_api_bank_search.yml
+++ b/opba-banking-rest-api/src/main/resources/static/tpp_banking_api_bank_search.yml
@@ -10,7 +10,7 @@ externalDocs:
 
 paths:
 
-  /v1/banking/search/bankSearch:
+  /v1/banking/search/bank-search:
     get:
       tags:
       - TppBankSearch
@@ -48,7 +48,7 @@ paths:
         '401':
           $ref: './tpp_banking_api_commons.yml#/components/responses/401_UNAUTHORIZED'
 
-  /v1/banking/search/bankProfile:
+  /v1/banking/search/bank-profile:
     get:
       tags:
       - TppBankSearch
@@ -149,6 +149,8 @@ components:
         bankName:
           type: string
         bic:
+          type: string
+        bankUuid:
           type: string
         serviceList:
           type: array
