--- a/fintech-examples/fintech-ui/package.json
+++ b/fintech-examples/fintech-ui/package.json
@@ -8,8 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "format:fix": "pretty-quick --pattern 'fintech-ui/**/*'",
-    "format:fix:precommit": "pretty-quick --staged --pattern 'fintech-ui/**/*'"
+    "format:fix": "pretty-quick --pattern 'fintech-examples/fintech-ui/**/*'",
+    "format:fix:precommit": "pretty-quick --staged --pattern 'fintech-examples/fintech-ui/**/*'"
   },
   "private": true,
   "dependencies": {
