--- a/core/banking-protocol/src/test/resources/application-test-one-time-postgres-disk-volume.yml
+++ b/core/banking-protocol/src/test/resources/application-test-one-time-postgres-disk-volume.yml
@@ -4,3 +4,5 @@ spring:
     username: postgres
     password: docker
     driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
+pkcs12:
+  keyStore: src/main/resources/sample-qwac.keystore
