--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jdk:
 
 script:
   # tests are not done with mvn test - dont know why
-  - mvn verify cobertura:cobertura
+  - ./scripts/build_mvn.sh
   - docker run -it --rm -v "$PWD":/opt/app-root/src -w /opt/app-root/src -u "$(id -u "${USER}"):$(id -g "${USER}")" trion/ng-cli make fintech-examples/fintech-ui
 
 after_success:
