--- a/sandbox-test/e2e-tests/pom.xml
+++ b/sandbox-test/e2e-tests/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>de.adorsys.opba</groupId>
         <artifactId>sandbox-test</artifactId>
-        <version>0.0.4-SNAPSHOT</version>
+        <version>0.0.4</version>
     </parent>
 
     <!-- POC that we can run whole sandbox within single JVM and H2 database for performance and debugging easiness -->
