--- a/core/bdd-sandbox/pom.xml
+++ b/core/bdd-sandbox/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>de.adorsys.opba</groupId>
         <artifactId>core</artifactId>
-        <version>0.0.4</version>
+        <version>0.0.5-SNAPSHOT</version>
     </parent>
 
     <!-- BDD Tests for protocol running on top of Sandbox -->
