--- a/core/bdd-tests/pom.xml
+++ b/core/bdd-tests/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>de.adorsys.opba</groupId>
         <artifactId>core</artifactId>
-        <version>0.0.5-SNAPSHOT</version>
+        <version>0.0.5</version>
     </parent>
 
     <!-- BDD Tests common step definitions, etc. -->
