--- a/fintech-examples/fintech-server/pom.xml
+++ b/fintech-examples/fintech-server/pom.xml
@@ -62,7 +62,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>${mockito.version}</version>
+            <version>2.25.1</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
