banking rest impl module

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <module>opba-embedded-starter</module>
         <module>fintech-examples</module>
         <module>last-module-codecoverage</module>
+        <module>opba-banking-rest-impl</module>
     </modules>
 
     <url>https://github.com/adorsys/open-banking-gateway</url>
