--- a/opba-embedded-starter/pom.xml
+++ b/opba-embedded-starter/pom.xml
@@ -22,12 +22,17 @@
         <dependency>
             <groupId>de.adorsys.opba</groupId>
             <artifactId>opba-banking-rest-api</artifactId>
-            <version>0.0.6-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>de.adorsys.opba</groupId>
             <artifactId>opba-consent-rest-api</artifactId>
-            <version>0.0.6-SNAPSHOT</version>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>de.adorsys.opba</groupId>
+            <artifactId>banking-protocol</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>de.adorsys.opba</groupId>
@@ -35,6 +40,13 @@
             <version>0.0.6-SNAPSHOT</version>
         </dependency>
 
+        <!-- DB Access -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
 
         <dependency>
             <groupId>org.springdoc</groupId>
