--- a/core/banking-protocol/pom.xml
+++ b/core/banking-protocol/pom.xml
@@ -68,6 +68,10 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+        </dependency>
 
         <!-- DB Access -->
         <dependency>
