--- a/opba-banking-rest-api/src/main/resources/static/tpp_banking_api_ais.yml
+++ b/opba-banking-rest-api/src/main/resources/static/tpp_banking_api_ais.yml
@@ -27,9 +27,14 @@ paths:
         information resources are provided if a related consent has been already granted.
 
       parameters:
+        #path
         #header
         #common header parameter
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Authorization"
+        - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Bank-ID"
+        - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Fintech-User-ID"
+        - $ref: "#/components/parameters/Fintech-Redirect-URL-OK"
+        - $ref: "#/components/parameters/Fintech-Redirect-URL-NOK"
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/PSU-Consent-Session"
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/X-Request-ID"
       security:
@@ -38,7 +43,7 @@ paths:
         '200':
           $ref: "#/components/responses/200_AccountList"
         '303':
-          $ref: '#/components/responses/303_REDIRECT'
+          $ref: '#/components/responses/303_AUTHORIZATION_REDIRECT'
         '401':
           $ref: './tpp_banking_api_commons.yml#/components/responses/401_UNAUTHORIZED'
 
@@ -58,6 +63,10 @@ paths:
         #header
         #common header parameter
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Authorization"
+        - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Bank-ID"
+        - $ref: "./tpp_banking_api_commons.yml#/components/parameters/Fintech-User-ID"
+        - $ref: "#/components/parameters/Fintech-Redirect-URL-OK"
+        - $ref: "#/components/parameters/Fintech-Redirect-URL-NOK"
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/PSU-Consent-Session"
         - $ref: "./tpp_banking_api_commons.yml#/components/parameters/X-Request-ID"
         #query
@@ -72,7 +81,7 @@ paths:
         '200':
           $ref: "#/components/responses/200_AccountsTransactions"
         '303':
-          $ref: '#/components/responses/303_REDIRECT'
+          $ref: '#/components/responses/303_AUTHORIZATION_REDIRECT'
         '401':
           $ref: './tpp_banking_api_commons.yml#/components/responses/401_UNAUTHORIZED'
 
@@ -167,6 +176,35 @@ components:
       schema:
         type: string
 
+    Fintech-Redirect-URL-OK:
+      name: Fintech-Redirect-URL-OK
+      in: header
+      desription: |
+        This header provides the desired URL where PSU will be redirected back after authorisation session in case of
+        successful authorisation. This URL might contain unique Identifier of this User and/or Session,
+        recognisable by FinTech.
+        Since authorisation may be mandated by the bank at any time, this header to be included to all
+        service requests, even if PsuConsentSession already exists.
+      required: true
+      schema:
+        type: string
+      example: "https://example.com/myservice/sf3-3r33-3535?authResult=success"
+
+    Fintech-Redirect-URL-NOK:
+      name: Fintech-Redirect-URL-NOK
+      in: header
+      desription: |
+        This header provides the desired URL where PSU will be redirected back  after authorisation session in case of
+        unsuccessful authorisation (i.e. PSU's authorisation reject, technical failure, lack of credentials etc.).
+        This URL might contain unique Identifier of this User and/or Session,
+        recognisable by FinTech.
+        Since authorisation may be mandated by the bank at any time, this header to be included to all
+        service requests, even if PsuConsentSession already exists.
+      required: true
+      schema:
+        type: string
+      example: "https://example.com/myservice/sf3-3r33-3535/failure"
+
 
 
   responses:
@@ -182,16 +220,14 @@ components:
           schema:
             $ref: "#/components/schemas/transactionsResponse"
 
-    303_REDIRECT:
+    303_AUTHORIZATION_REDIRECT:
       description: |
         User authorisation session mandated. Agent shall redirect the user to the Authorisation URI provided in response.
       headers:
+        Location:
+          $ref: "./tpp_banking_api_commons.yml#/components/headers/Location"
         X-Request-ID:
           $ref: "./tpp_banking_api_commons.yml#/components/headers/X-Request-ID"
-      content:
-        application/json:
-          schema:
-            $ref: "#/components/schemas/AuthChallenge"
 
     200_AccountList:
       description: OK
@@ -204,14 +240,6 @@ components:
             $ref: "#/components/schemas/accountList"
 
   schemas:
-    AuthChallenge:
-      description: |
-        The PSU shall perform the authorisation procedures at ASPSP through the interface provided by the given link. Additional get parameters 'Agent-Callback-OK' and 'Agent-Callback-NOK' may be added to the link by the agent to get notified about the procedure end.
-      type: object
-      properties:
-        web:
-          $ref: "#/components/schemas/hrefType"
-
     accountDetails:
       description: |
         The ASPSP shall give at least one of the account reference identifiers:
